# Thingi10K

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/: build_wheel.sh
src/thingi10k/: Thingi10K.py  __init__.py  _builder.py  _clip.py  _logging.py  _utils.py  utils.py
src/thingi10k/metadata/: contextual_data.csv  geometry_data.csv  input_summary.csv  tag_data.csv
tests/: test_thingi10k.py
