[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "thingi10k"
authors = [{name = "Qingnan Zhou", email = "qz263@nyu.edu"}, {name = "Alec Jacobson", email = "jacobson@cs.toronto.edu"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["description", "version"]
dependencies=[
    "datasets>=4.0",
    "numpy>=1.22",
    "polars>=1.0",
    "lagrange-open>=6.29.0",
    ]
requires-python = ">=3.10"

[project.optional-dependencies]
clip = [
    "open_clip_torch==3.0.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
]
lint = [
    "mypy==1.15.0",
    "ruff==0.9.5",
]

[mypy]
plugins = "numpy.typing.mypy_plugin"
follow_imports = "skip"
